Fix the Close button is not much visible
Previously:

https://i.imgur.com/B5fr84G.png

Now:

https://i.imgur.com/kPde5Ht.png

--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -147,6 +147,10 @@
     border-left-color: var(--brand-primary);
 }
 
+.kiwi-sidebar-options {
+    color: var(--brand-default-fg);
+}
+
 
 /* Statebrowser */
 .kiwi-statebrowser {
